tests/error/array_errors/subscript_non_inout.err
Error: Subscript moved (at $FILE:8:8)
  | 
6 | @guppy
7 | def main(qs: array[qubit, 42]) -> tuple[qubit, array[qubit, 42]]:
8 |     q = qs[0]
  |         ^^^^^ Cannot move a subscript of `qs` with non-copyable type
  |               `array[qubit, 42]`

Note: Subscripts on non-copyable types are only allowed to be borrowed, not
moved

Guppy compilation failed due to 1 previous error
